<resources>
    <string name="app_name">YouMissed</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="support">Support</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="custom_message">Custom Message</string>
    <string name="set_custom_message">Current Message:</string>
    <string name="missed_calls">Missed Calls</string>
    <string name="calls_that_you_missed_will_be_listed_here">Calls that you missed today will be listed here</string>
    <string name="no_missed_calls_yet">No missed calls today</string>
    <string name="share">Share</string>
    <string name="sms_settings">SMS settings</string>
    <string name="delay_time">Delay Sending Notification</string>
    <string name="today">Today</string>
    <string name="edit">Edit</string>
    <string name="add_new">Add New</string>
    <string name="block">Block Number</string>
    <string name="copy">Copy Number</string>
    <string name="unknown_contacts">Unknown Callers</string>
    <string name="unknown_contacts_subtext">Send SMS replies to unknown missed calls</string>
    <string name="copied">Phone Number copied!</string>
    <string name="block_user">Successfully blocked contact!</string>
    <string name="empty">Cannot be empty</string>
    <string name="message_saved">Message Successfully Saved!</string>
    <string name="blocked">Contact blocked!</string>
    <string name="already_blocked">Contact already blocked!</string>
    <string name="unblocked">Contact unblocked!</string>
    <string name="no_blocked_contacts">No Blocked Contacts</string>
    <string name="contacts_that_you_blocked_will_be_listed_here">Contacts that you blocked will be listed here</string>
    <string name="delete_missed_calls">Deleted All Missed Calls!</string>
    <string name="info">Blocked Info</string>
    <string name="message_add_on">https://goo.gl/gxrhRJ</string>
    <string name="rate">Rate this app</string>
    <string name="default_sms_message">Sorry i missed your call, i\'ll get back to you as soon as i can.</string>
    <string name="unblock">Unblock</string>
    <string name="sms_settings_message">The long version is: You have disabled sending SMS to calls that you missed. Sad face, real bummer. Short version: Your missed callers will not be notified by SMS. To fix  this? Re-enable SMS feature on the top right.</string>
    <string name="about_footer">Made for you, for fun! Go nuts with it!</string>
</resources>
